
	* src/view_area.cpp: Normalize rotation quaternion to guarantee that
	it represents a rotation.
	* gllib/glvm.h: Improvements.
	* gllib/glvm-color.h, Makefile.am: New GLVM module for color space
	conversions.
	* src/view_area.cpp: Use glvm-color module.
	* src/view_area.cpp: Print luminance information in pixel info area
	also for formats like RGBA, RGBZ, and others.
	* TODO: Update.

2008-06-26  Martin Lambers <marlam@marlam.de>

	* gllib/Makefile.am, gllib/glvm.h, gllib/glvm-gl.h, gllib/arcball.h,
	gllib/arcball.cpp, Makefile.am, configure.ac: Add gllib, a set of
	useful routines for use with OpenGL.
	* src/rotation_selector.h, src/rotation_selector.cpp, src/view_area.h,
	src/view_area.cpp, src/cvlview.cpp, Makefile.am: Implement proper 3D
	rotation with 2D mouse using gllib's ArcBall class.
	* src/view_area.cpp: Only rotate when in 3D view mode.
	* src/grid_selector.h, src/grid_selector.cpp, src/view_area.h,
	src/view_area.cpp, src/cvlview.h, src/cvlview.cpp, src/Makefile.am:
	Add grid selector that allows to display a data pixel grid in flat view.
	* TODO: Update.
	* NEWS: Update.
	* src/view_area.cpp: Fix "Save current view" functionality for 2D
	view.
	* TODO: Update.

2008-06-25  Martin Lambers <marlam@marlam.de>

	* build-aux/qt4.m4: Search Qt4 libs also in lib64. Reported by Rainer
	Bachl. Thanks!
	* TODO: Update.

2008-06-24  Martin Lambers <marlam@marlam.de>

	* configure.ac: Fix linking with libGLEW in some situations.

2008-06-17  Martin Lambers <marlam@marlam.de>

	* TODO, Makefile.am: Add TODO file.

2008-05-17  Martin Lambers <marlam@marlam.de>

	* NEWS, doc/cvlview.1, doc/cvlview.texi: Update.

2008-05-16  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h: Remove non-portable MH_STDIN and MH_STDOUT macros.

2008-04-28  Martin Lambers <marlam@marlam.de>

	* src/pseudocolor_selector.h, src/pseudocolor_selector.cpp,
	src/view_area.cpp: Use new invert option for pseudo coloring, to allow
	using hue values in the opposite direction.
