@@ -9,6 +9,10 @@
 	* src/view_area.cpp: Print luminance information in pixel info area
 	also for formats like RGBA, RGBZ, and others.
 	* TODO: Update.
+	* src/heightmap_selector.h, src/heightmap_selector.cpp,
+	src/heightmap_quads_vs.glsl, src/heightmap_strip_vs.glsl,
+	src/view_area.cpp: Always use selected range as height data. Apply
+	gamma correction to height data.
 
 2008-06-26  Martin Lambers <marlam@marlam.de>
 
